added SelectCommand  - removed region selection from other subcommands (regenRegion, DegenArea and Region)  - added integration for world edit - you can now select via your trusty wooden axe and WECUI